# genai-telemetry

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
examples/: basic_openai.py  multi_backend.py  rag_pipeline.py  test.py
genai_telemetry/: __init__.py
genai_telemetry/core/: __init__.py  decorators.py  span.py  telemetry.py  utils.py
genai_telemetry/exporters/: __init__.py  base.py  cloudwatch.py  console.py  datadog.py  elasticsearch.py  file.py  loki.py  multi.py  otlp.py  prometheus.py  splunk.py
js/: .gitignore  .npmignore  LICENSE  README.md  package.json  tsconfig.json  tsup.config.ts
js/examples/: basic_openai.ts  multi_backend.ts  rag_pipeline.ts
js/src/: index.ts  types.ts
js/src/core/: decorators.ts  index.ts  span.ts  telemetry.ts  utils.ts
js/src/exporters/: base.ts  cloudwatch.ts  console.ts  datadog.ts  elasticsearch.ts  file.ts  index.ts  loki.ts  multi.ts  otlp.ts  prometheus.ts  splunk.ts
js/tests/: core.test.ts  exporters.test.ts
tests/: __init__.py  test_core.py  test_exporters.py
